plugins {
    id 'org.springframework.boot' version '3.2.4' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
    id 'java'
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.ecommerce'
    version = '0.0.1-SNAPSHOT'

    java { sourceCompatibility = '21' }

    repositories { mavenCentral() }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }
    if (project.name != 'application') {
        bootJar { enabled = false }
        jar { enabled = true }
    }
}